--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+@layer base {
+  body{
+    @apply dark:bg-gray-800 bg-white dark:text-white text-black
+  }
+}
+@layer base {
+  h1 {
+    @apply text-5xl
+  }
+  h2 {
+    @apply text-4xl
+  }
+  h3 {
+    @apply text-3xl
+  }
+  h4 {
+    @apply text-2xl
+  }
+  h5 {
+    @apply text-xl
+  }
+  p {
+    @apply text-base
+  }
+}
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -108,4 +133,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
